# AirlinesOptimization

./: .gitignore  CMakeLists.txt  README.md  test_data.ipynb
src/: main.cpp
src/DataTypes/: TypesDefinition.hpp
src/Parser/: FlightData.hpp  FlightsDF.cpp  FlightsDF.hpp
src/Solvers/: DynProgPDA.cpp  DynProgPDA.hpp  GreedyDTA.cpp  GreedyDTA.hpp  ModelSolverIDA.cpp  ModelSolverIDA.hpp  ModelSolverPDA.cpp  ModelSolverPDA.hpp
src/parser/: DataFrame.cpp  DataFrame.hpp  FlightData.hpp  FlightsDF.cpp  FlightsDF.hpp
src/solvers/: DynProgPDA.cpp  DynProgPDA.hpp  GreedyDTA.cpp  GreedyDTA.hpp
